2012-05-16 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/Makefile.in: renamed test-z80 and test-gbz80 to test-rr...
	* support/regression/ports/gbz80,
	* support/regression/ports/rrgbz80: renamed to rrgbz80
	* support/regression/ports/z80,
	* support/regression/ports/rrz80: renamed to rrz80
	* support/regression/tests/gcc-torture-execute-921013-1.c: disabled for xstack

2012-05-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (genAnd): added forgotten ifx->generated = TRUE

2012-05-15 Maarten Brock <sourceforge.brock AT dse.nl>

	* support/regression/tests/gcc-torture-execute-961017-2.c: use less loops to
	  reduce test time

2012-05-15 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* sim/ucsim/hc08.src/hc08.cc,
	* sim/ucsim/hc08.src/inst.cc: Fixed simulation of brset/brclr. Keep
	  track of instruction cycle times.
	* src/hc08/gen.c (genAnd): Use brset/brclr where possible

2012-05-14 Leland Morrison <enigmalee AT sourceforge.net>

	* sim/ucsim/stypes.h,
	* sim/ucsim/globals.cc: add R3KA (rabbit 3000A) processor type
	* sim/ucsim/z80.src/r2k.cc,
	* sim/ucsim/z80.src/simz80.cc: added initialization code for R3KA support
	* sim/ucsim/z80.src/r2kcl.h,
	* sim/ucsim/z80.src/inst_ed_r2k.cc: support for r3ka instructions
	* sim/ucsim/z80.src/inst_ed.cc: change to allow overloading of inst_ed_
	
2012-05-14 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c: correct some dry run costs, update genDivOneByte()
	  and genModOneByte() to handle all register operand posibilities

2012-05-13 Maarten Brock <sourceforge.brock AT dse.nl>

	* sim/ucsim/pobj.cc,
	* sim/ucsim/pobjcl.h: made cl_list::at inline
	* sim/ucsim/s51.src/regs51.h: added AP
	* sim/ucsim/s51.src/uc390.cc (inst_inc_dptr): fixed sel bug,
	  (disass): show inc/dec dptr,
	  (print_regs): show DPTR0, DPTR1 and AP	
	* src/ds390/gen.c (genGenPointerGet, genGenPointerSet): fixed bug 3509705
	* support/regression/compact-results.py: align results